test extra bugs

--- a/evaluation/ragas-docs.ipynb
+++ b/evaluation/ragas-docs.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "ff95398a-55da-4445-bcbf-a651cd919c85",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install python-dotenv langchain --quiet"
+    "!pip install python-dotenv langchain pandas llama-index ragas --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "66d6b380-18b4-409a-8d84-9f29508a344e",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "baf7f926-d4cb-45c8-a790-29c0d1ac9ae1",
    "metadata": {},
    "outputs": [],
@@ -46,79 +46,180 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "a7a43831-182f-47ef-ab90-b46f34fc9176",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.document_loaders import DirectoryLoader\n",
-    "loader = DirectoryLoader(\"test_eval\")\n",
-    "documents = loader.load()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3a6c749f-55ad-4a95-b71f-9b2a7ddfc2da",
    "metadata": {},
    "source": [
-    "### data generation"
+    "# LLAMAINDEX"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "11ec27af-1a04-4bd7-a24b-86cf24a0f6d6",
+   "execution_count": 4,
+   "id": "4b945f16-9225-4e07-a3af-e9d3bad47a09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nest_asyncio\n",
+    "\n",
+    "nest_asyncio.apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "07ad8932-2951-4089-8095-70ebb8c7137f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index import VectorStoreIndex, SimpleDirectoryReader, ServiceContext\n",
+    "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cf4ddb01-5605-46d2-b3ca-4489ea198eb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index import download_loader\n",
+    "\n",
+    "SimpleWebPageReader = download_loader(\"SimpleWebPageReader\")\n",
+    "\n",
+    "loader = SimpleWebPageReader()\n",
+    "documents = loader.load_data(urls=['https://en.wikipedia.org/wiki/New_York_City'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "344191fb-fff0-4191-b666-340a1bfa466b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector_index = VectorStoreIndex.from_documents(\n",
+    "    documents, service_context=ServiceContext.from_defaults(chunk_size=512)\n",
+    ")\n",
+    "\n",
+    "query_engine = vector_index.as_query_engine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b69437dd-9d6e-40e1-a55f-d97b09904e92",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "embedding nodes: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "ExceptionInRunner",
-     "evalue": "The runner thread which was running the jobs raised an exeception. Read the traceback above to debug it. You can also pass `raise_exception=False` incase you want to show only a warning message instead.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mExceptionInRunner\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m generator \u001b[38;5;241m=\u001b[39m TestsetGenerator\u001b[38;5;241m.\u001b[39mwith_openai()\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# generate testset\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m testset \u001b[38;5;241m=\u001b[39m \u001b[43mgenerator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate_with_langchain_docs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdocuments\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdistributions\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\u001b[43msimple\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreasoning\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.25\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmulti_context\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.25\u001b[39;49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/ragas/testset/generator.py:150\u001b[0m, in \u001b[0;36mTestsetGenerator.generate_with_langchain_docs\u001b[0;34m(self, documents, test_size, distributions, with_debugging_logs, is_async, raise_exceptions, run_config)\u001b[0m\n\u001b[1;32m    139\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgenerate_with_langchain_docs\u001b[39m(\n\u001b[1;32m    140\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m    141\u001b[0m     documents: t\u001b[38;5;241m.\u001b[39mSequence[LCDocument],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    148\u001b[0m ):\n\u001b[1;32m    149\u001b[0m     \u001b[38;5;66;03m# chunk documents and add to docstore\u001b[39;00m\n\u001b[0;32m--> 150\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdocstore\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_documents\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    151\u001b[0m \u001b[43m        \u001b[49m\u001b[43m[\u001b[49m\u001b[43mDocument\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_langchain_document\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoc\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdoc\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdocuments\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    152\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    154\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgenerate(\n\u001b[1;32m    155\u001b[0m         test_size\u001b[38;5;241m=\u001b[39mtest_size,\n\u001b[1;32m    156\u001b[0m         distributions\u001b[38;5;241m=\u001b[39mdistributions,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    160\u001b[0m         run_config\u001b[38;5;241m=\u001b[39mrun_config,\n\u001b[1;32m    161\u001b[0m     )\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/ragas/testset/docstore.py:210\u001b[0m, in \u001b[0;36mInMemoryDocumentStore.add_documents\u001b[0;34m(self, docs, show_progress)\u001b[0m\n\u001b[1;32m    204\u001b[0m \u001b[38;5;66;03m# split documents with self.splitter into smaller nodes\u001b[39;00m\n\u001b[1;32m    205\u001b[0m nodes \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m    206\u001b[0m     Node\u001b[38;5;241m.\u001b[39mfrom_langchain_document(d)\n\u001b[1;32m    207\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m d \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msplitter\u001b[38;5;241m.\u001b[39mtransform_documents(docs)\n\u001b[1;32m    208\u001b[0m ]\n\u001b[0;32m--> 210\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_nodes\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnodes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshow_progress\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mshow_progress\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/ragas/testset/docstore.py:250\u001b[0m, in \u001b[0;36mInMemoryDocumentStore.add_nodes\u001b[0;34m(self, nodes, show_progress, desc)\u001b[0m\n\u001b[1;32m    248\u001b[0m results \u001b[38;5;241m=\u001b[39m executor\u001b[38;5;241m.\u001b[39mresults()\n\u001b[1;32m    249\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m results \u001b[38;5;241m==\u001b[39m []:\n\u001b[0;32m--> 250\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ExceptionInRunner()\n\u001b[1;32m    252\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, n \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(nodes):\n\u001b[1;32m    253\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m nodes_to_embed\u001b[38;5;241m.\u001b[39mkeys():\n",
-      "\u001b[0;31mExceptionInRunner\u001b[0m: The runner thread which was running the jobs raised an exeception. Read the traceback above to debug it. You can also pass `raise_exception=False` incase you want to show only a warning message instead."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New York City got its name in honor of the Duke of York, who later became King James II of England. The city was originally named New Amsterdam when it was under Dutch control, but it was renamed New York after England seized the territory from the Dutch and granted it to the Duke of York.\n"
      ]
     }
    ],
    "source": [
-    "from ragas.testset.generator import TestsetGenerator\n",
-    "from ragas.testset.evolutions import simple, reasoning, multi_context\n",
+    "response_vector = query_engine.query(\"How did New York City get its name?\")\n",
     "\n",
-    "# generator with openai models\n",
-    "generator = TestsetGenerator.with_openai()\n",
+    "print(response_vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d5a95a07-0a56-46f8-9c59-0e39e6f39b00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_questions = [\n",
+    "    \"What is the population of New York City as of 2020?\",\n",
+    "    \"Which borough of New York City has the highest population?\",\n",
+    "    \"What is the economic significance of New York City?\",\n",
+    "    \"How did New York City get its name?\",\n",
+    "    \"What is the significance of the Statue of Liberty in New York City?\",\n",
+    "]\n",
     "\n",
-    "# generate testset\n",
-    "testset = generator.generate_with_langchain_docs(documents, test_size=10, distributions={simple: 0.5, reasoning: 0.25, multi_context: 0.25})"
+    "eval_answers = [\n",
+    "    \"8,804,000\",  # incorrect answer\n",
+    "    \"Queens\",  # incorrect answer\n",
+    "    \"New York City's economic significance is vast, as it serves as the global financial capital, housing Wall Street and major financial institutions. Its diverse economy spans technology, media, healthcare, education, and more, making it resilient to economic fluctuations. NYC is a hub for international business, attracting global companies, and boasts a large, skilled labor force. Its real estate market, tourism, cultural industries, and educational institutions further fuel its economic prowess. The city's transportation network and global influence amplify its impact on the world stage, solidifying its status as a vital economic player and cultural epicenter.\",\n",
+    "    \"New York City got its name when it came under British control in 1664. King Charles II of England granted the lands to his brother, the Duke of York, who named the city New York in his own honor.\",\n",
+    "    \"The Statue of Liberty in New York City holds great significance as a symbol of the United States and its ideals of liberty and peace. It greeted millions of immigrants who arrived in the U.S. by ship in the late 19th and early 20th centuries, representing hope and freedom for those seeking a better life. It has since become an iconic landmark and a global symbol of cultural diversity and freedom.\",\n",
+    "]\n",
+    "\n",
+    "eval_answers = [[a] for a in eval_answers]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d3f5718e-9d68-4867-a384-1435dbcd443d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ragas import evaluate\n",
+    "from ragas.metrics import (\n",
+    "    faithfulness,\n",
+    "    answer_relevancy,\n",
+    "    context_precision,\n",
+    "    context_recall,\n",
+    ")\n",
+    "from ragas.metrics.critique import harmfulness\n",
+    "\n",
+    "metrics = [\n",
+    "    faithfulness,\n",
+    "    answer_relevancy,\n",
+    "    context_precision,\n",
+    "    context_recall,\n",
+    "    harmfulness,\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8cc7a60b-467f-48a7-9d5c-d86b0f6e927a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ragas.llama_index'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mragas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mllama_index\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m evaluate\n\u001b[1;32m      2\u001b[0m result \u001b[38;5;241m=\u001b[39m evaluate(query_engine, metrics, eval_questions, eval_answers)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ragas.llama_index'"
+     ]
+    }
+   ],
+   "source": [
+    "from ragas.llama_index import evaluate\n",
+    "result = evaluate(query_engine, metrics, eval_questions, eval_answers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c9c83b8-97c4-473c-8982-724153867cd0",
+   "metadata": {},
+   "source": [
+    "WHUT ??? all docs say i need to use this\n",
+    "https://docs.ragas.io/en/stable/howtos/integrations/llamaindex.html\n",
+    "\n",
+    "maybe format dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b945f16-9225-4e07-a3af-e9d3bad47a09",
+   "id": "1dd1d253-8b12-4568-9207-2408c26d836f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "testset.to_pandas()"
+    "print(result)\n",
+    "result.to_pandas()"
    ]
   }
  ],
